@@ -26,7 +26,7 @@ commands = { 'atz' : 'Nothing',
                         'ate0' : 'Nothing',
                         'RV' : '12.4V',
                         #'0100' : '41 00 B8300010',
-                        '0100' : '41 00 FFFFFFFFF',
+                        '0100' : '41 00 FFFFFFFF',
                         '0120' : '41 00 00000000',
                         '0101' : '41 01 82 07 65 04',
                         '0102' : '41 02 00 00',
